--- a/templates/work.html
+++ b/templates/work.html
@@ -154,19 +154,23 @@
                         <div class="info-title">Tipo de trabajo:</div>
                         <div class="info-box">{{types}}</div>
                     </div>
-<div class="comment-section">
-    <div class="input-container">
-        <form action="{{ url_for('update', user=user) }}" method="post">
-            <textarea class="comment-input" name="comments" rows="4" placeholder="Escribe tu comentario..."></textarea>
-            <div class="button-container">
-                <button class="submit-button" type="submit">Enviar</button>
-                <button class="additional-button" type="button">Botón 1</button>
-                <button class="additional-button" type="button">Botón 2</button>
-            </div>
-        </form>                       
-    </div>
-</div>          
-
+                    <div class="comment-section">
+                        <div class="input-container">
+                            <form action="{{ url_for('update', user=user) }}" method="post">
+                            <textarea class="comment-input" name="comments" rows="4" placeholder="Escribe tu comentario..."></textarea>
+                            <div class="button-container">
+                                    <button class="submit-button" type="submit">Enviar</button>
+                                </form>
+                                
+                                <form action="{{ url_for('open_folder', id=nor, nombre=details[0][0]) }}" method="post" target="response_frame">
+                                    <button class="additional-button" type="submit">Botón 1</button>
+                                </form>
+                                <form action="{{ url_for('update', user=user) }}" method="post">
+                                    <button class="additional-button" type="submit">Botón 2</button>
+                                </form>
+                            </div>           
+                        </div>
+                    </div>                              
                 <div class="confirmation-modal hidden" id="confirmationModal">
                     <div class="modal-content">
                         <h3>¿Estás seguro de que deseas eliminar?</h3>
@@ -180,6 +184,7 @@
                 <script src="../static/js/home.js"></script>
                 <script src="../static/js/sidebar.js"></script>
             </section>
+            <iframe name="response_frame" style="border:none; width:100%; height:50px;"></iframe>
 </body>
 
 </html>
