--- a/templates/work.html
+++ b/templates/work.html
@@ -163,7 +163,7 @@
                                 </form>
                                 
                                 <form action="{{ url_for('open_folder', id=nor, nombre=details[0][0]) }}" method="post" target="response_frame">
-                                    <button class="additional-button" type="submit">Botón 1</button>
+                                    <button class="additional-button" type="submit">Abrir Carpeta</button>
                                 </form>
                                 <form action="{{ url_for('update', user=user) }}" method="post">
                                     <button class="additional-button" type="submit">Botón 2</button>
