--- a/templates/home.html
+++ b/templates/home.html
@@ -153,7 +153,7 @@
                         <div class="form-row" id="userFields">
                             <div class="form-group">
                                 <label for="name">Nombre:</label>
-                                <input type="text" id="name" name="names" placeholder="Name" required disabled>
+                                <input type="text" id="name" name="names" required disabled>
                             </div>
                             <div class="form-group">
                                 <label for="surname">Apellido:</label>
