create function to save data in record
si

--- a/templates/home.html
+++ b/templates/home.html
@@ -251,9 +251,9 @@
                                 <div style="display: flex; align-items: center;">
                                     <input type="number" id="down-payment" name="down-payment">
                                     <select id="currency" name="currency">
-                                        <option value="bolivares">BS</option>
-                                        <option value="pesos">COP</option>
-                                        <option value="dolares">USD</option>
+                                        <option value="3">BS</option>
+                                        <option value="2">COP</option>
+                                        <option value="1">USD</option>
                                     </select>
                                 </div>
                             </div>
