--- a/templates/design.html
+++ b/templates/design.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../static/css/scrollbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <script src="../static/js/card-color.js"></script>
 </head>
 
 <body>
@@ -109,7 +110,7 @@
             {% for item, item2 in filas %}
             <div class="card-item" data-job-type="designer" style="cursor: pointer;">
                 <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
-                    <img src="../static/img/editor.jpg" alt="Card Image">
+                    <img src="../static/img/Editor.png" alt="Card Image" class="card-image">
                     <p class="card-title">{{ item[0] }}</p>
                     <p class="card-name-container">
                         <span class="card-name">{{ item[3] }}</span>
@@ -152,6 +153,7 @@
     <script src="../static/js/roles.js"></script>
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/home.js"></script>
+    <script src="../static/js/card-color.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
