--- a/templates/settings.html
+++ b/templates/settings.html
@@ -18,8 +18,8 @@
                     <img src="../static/img/icon.ico" alt="iconcopy">
                 </span>
                 <div class="text logo-text">
-                    <span class="name">@username</span>
-                    <span class="profession">@cargo</span>
+                    <span class="name">{{user[0]}}</span>
+                    <span class="profession" id="role">{{user[1]}}</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
