--- a/templates/work.html
+++ b/templates/work.html
@@ -23,7 +23,7 @@
                 </span>
                 <div class="text logo-text">
                     <span class="name">{{user[0]}}</span>
-                    <span class="profession">{{user[1]}}</span>
+                    <span class="profession" id="role">{{user[1]}}</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
@@ -53,24 +53,24 @@
                         </a>
                     </li>
                     <li class="nav-link" id="aprobacion">
-                        <a href="#">
+                        <a href="{{ url_for('approval') }}">
                             <i class='bx bx-check-circle icon'></i>
                             <span class="text nav-text">Aprobación</span>
                         </a>
                     </li>
                     <li class="nav-link" id="elaboracion">
-                        <a href="#">
+                        <a href="{{ url_for('crafting') }}">
                             <i class='bx bx-edit icon'></i>
                             <span class="text nav-text">Elaboración</span>
                         </a>
                     </li>
                     <li class="nav-link" id="entrega">
-                        <a href="#">
+                        <a href="{{ url_for('ending') }}">
                             <i class='bx bx-send icon'></i>
                             <span class="text nav-text">Entrega</span>
                         </a>
                     </li>
-                </ul>
+                </ul> 
             </div>
             <div class="bottom-content">
                 <li class="">
@@ -108,47 +108,47 @@
             </div>
         </div>  
           <div class="card">
-            <h2>{{ details[0][0] }}</h2>
+            <h2>{{ details[0] }}</h2>
                 <div class="info-container">
                     <div class="info-item">
                         <div class="info-title">Título:</div>
-                        <div class="info-box">{{details[0][0]}}</div>
+                        <div class="info-box">{{details[0]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Fecha de registro:</div>
-                        <div class="info-box">{{details[0][1]}}</div>
+                        <div class="info-box">{{details[1]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Fecha de entrega:</div>
-                        <div class="info-box">{{details[0][2]}}</div>
+                        <div class="info-box">{{details[2]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Tipo de moneda:</div>
-                        <div class="info-box">{{details[0][3]}}</div>
+                        <div class="info-box">{{details[3]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Abonado:</div>
-                        <div class="info-box">{{details[0][4]}}</div>
+                        <div class="info-box">{{details[4]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Restante de abono:</div>
-                        <div class="info-box">{{details[0][5]}}</div>
+                        <div class="info-box">{{details[5]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Total:</div>
-                        <div class="info-box">{{details[0][6]}}</div>
+                        <div class="info-box">{{details[6]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Cliente titular:</div>
-                        <div class="info-box">{{details[0][7]}}</div>
+                        <div class="info-box">{{details[7]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Teléfono:</div>
-                        <div class="info-box">{{details[0][8]}}</div>
+                        <div class="info-box">{{details[8]}}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Descripción:</div>
-                        <div class="info-box">{{details[0][9]}}</div>
+                        <div class="info-box">{% for text in details[9]%} {{text}} <br><br> {%endfor%} </div>
                     </div>
                     <div class="info-item">
                         <div class="info-title">Tipo de trabajo:</div>
@@ -162,11 +162,11 @@
                                     <button class="submit-button" type="submit">Enviar</button>
                                 </form>
                                 
-                                <form action="{{ url_for('open_folder', id=nor, nombre=details[0][0]) }}" method="post" target="response_frame">
+                                <form action="{{ url_for('open_folder', id=nor, nombre=details[0][0]) }}"target="response_frame">
                                     <button class="additional-button" type="submit">Abrir Carpeta</button>
                                 </form>
-                                <form action="{{ url_for('update', user=user) }}" method="post">
-                                    <button class="additional-button" type="submit">Botón 2</button>
+                                <form action="{{ url_for('next', id=nor) }}">
+                                    <button class="additional-button" type="submit">Completado</button>
                                 </form>
                             </div>           
                         </div>
