--- a/templates/settings-user.html
+++ b/templates/settings-user.html
@@ -11,6 +11,18 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="info">
+            <div class="info__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none"><path fill="#393a37" d="m12 1.5c-5.79844 0-10.5 4.70156-10.5 10.5 0 5.7984 4.70156 10.5 10.5 10.5 5.7984 0 10.5-4.7016 10.5-10.5 0-5.79844-4.7016-10.5-10.5-10.5zm.75 15.5625c0 .1031-.0844.1875-.1875.1875h-1.125c-.1031 0-.1875-.0844-.1875-.1875v-6.375c0-.1031.0844-.1875.1875-.1875h1.125c.1031 0 .1875.0844.1875.1875zm-.75-8.0625c-.2944-.00601-.5747-.12718-.7808-.3375-.206-.21032-.3215-.49305-.3215-.7875s.1155-.57718.3215-.7875c.2061-.21032.4864-.33149.7808-.3375.2944.00601.5747.12718.7808.3375.206.21032.3215.49305.3215.7875s-.1155.57718-.3215.7875c-.2061.21032-.4864.33149-.7808.3375z"></path></svg>
+            </div>
+            <div class="info__title">{{ message }}</div>
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -18,8 +30,8 @@
                     <img src="../static/img/icon.ico" alt="iconcopy">
                 </span>
                 <div class="text logo-text">
-                    <span class="name">@username</span>
-                    <span class="profession">@cargo</span>
+                    <span class="name">{{user[0]}}</span>
+                    <span class="profession" id="role">{{user[1]}}</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
@@ -106,7 +118,7 @@
         <div class="form-container">
             <div class="form-card" id="registerUser">
                 <h3>Registrar Nuevo Usuario</h3>
-                <form action="" method="POST">
+                <form action="" method="POST" action="{{ url_for('settings_user') }}">
                     <div class="form-group">
                         <label for="username">Usuario:</label>
                         <input type="text" id="username" name="username" required placeholder="Ingrese el nombre de usuario">
@@ -119,9 +131,9 @@
                         <label for="role">Cargo:</label>
                         <select id="role" name="role" required>
                             <option value="">Seleccione un cargo</option>
-                            <option value="admin">Administrador</option>
-                            <option value="user">Usuario</option>
-                            <option value="editor">Editor</option>
+                            <option value="Designer">Diseñador</option>
+                            <option value="Crafter">Elaborador</option>
+                            <option value="Installer">Instalador</option>
                         </select>
                     </div>
                     <div class="form-group">
