--- a/templates/work.html
+++ b/templates/work.html
@@ -70,7 +70,7 @@
                             <span class="text nav-text">Entrega</span>
                         </a>
                     </li>
-                </ul> 
+                </ul>
             </div>
             <div class="bottom-content">
                 <li class="">
@@ -98,79 +98,95 @@
             </div>
         </div>
     </nav>
+
     <section class="home">
         <div class="home-header">
             <div class="back-button">
                 <a href="javascript:history.back()" class="back-btn">
-                    <i class='bx bx-chevron-left' ></i> <!-- Puedes cambiar el ícono aquí -->
+                    <i class='bx bx-chevron-left'></i>
                 </a>
                 <div class="text">Detalles</div>
             </div>
-        </div>  
-          <div class="card">
+        </div>
+
+        <!-- Mensajes Flash -->
+        {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            <div class="flash-messages">
+                {% for message in messages %}
+                    <div class="flash-message">{{ message }}</div>
+                {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
+
+        <div class="card">
             <h2>{{ details[0] }}</h2>
-                <div class="info-container">
-                    <div class="info-item">
-                        <div class="info-title">Título:</div>
-                        <div class="info-box">{{details[0]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Fecha de registro:</div>
-                        <div class="info-box">{{details[1]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Fecha de entrega:</div>
-                        <div class="info-box">{{details[2]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Tipo de moneda:</div>
-                        <div class="info-box">{{details[3]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Abonado:</div>
-                        <div class="info-box">{{details[4]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Restante de abono:</div>
-                        <div class="info-box">{{details[5]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Total:</div>
-                        <div class="info-box">{{details[6]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Cliente titular:</div>
-                        <div class="info-box">{{details[7]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Teléfono:</div>
-                        <div class="info-box">{{details[8]}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Descripción:</div>
-                        <div class="info-box">{% for text in details[9]%} {{text}} <br><br> {%endfor%} </div>
-                    </div>
-                    <div class="info-item">
-                        <div class="info-title">Tipo de trabajo:</div>
-                        <div class="info-box">{% for type in types %}{{ type }}, {% endfor %}</div>
-                    </div>
-                    <div class="comment-section">
-                        <div class="input-container">
-                            <form action="{{ url_for('update', id=nor, user=user[0]) }}" method="post">
-                            <textarea class="comment-input" name="comments" rows="4" placeholder="Escribe tu comentario..."></textarea>
-                            <div class="button-container">
-                                    <button class="submit-button" type="submit">Enviar</button>
-                                </form>
-                                
-                                <form action="{{ url_for('open_folder', id=nor, nombre=details[0]) }}"target="response_frame">
-                                    <button class="additional-button" type="submit">Abrir Carpeta</button>
-                                </form>
-                                <form action="{{ url_for('next', id=nor) }}">
-                                    <button class="additional-button" type="submit">Completado</button>
-                                </form>
-                            </div>           
+            <div class="info-container">
+                <div class="info-item">
+                    <div class="info-title">Título:</div>
+                    <div class="info-box">{{details[0]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Fecha de registro:</div>
+                    <div class="info-box">{{details[1]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Fecha de entrega:</div>
+                    <div class="info-box">{{details[2]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Tipo de moneda:</div>
+                    <div class="info-box">{{details[3]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Abonado:</div>
+                    <div class="info-box">{{details[4]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Restante de abono:</div>
+                    <div class="info-box">{{details[5]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Total:</div>
+                    <div class="info-box">{{details[6]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Cliente titular:</div>
+                    <div class="info-box">{{details[7]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Teléfono:</div>
+                    <div class="info-box">{{details[8]}}</div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Descripción:</div>
+                    <div class="info-box">{% for text in details[9]%} {{text}} <br><br> {%endfor%} </div>
+                </div>
+                <div class="info-item">
+                    <div class="info-title">Tipo de trabajo:</div>
+                    <div class="info-box">{% for type in types %}{{ type }}, {% endfor %}</div>
+                </div>
+                <div class="comment-section">
+                    <div class="input-container">
+                        <textarea class="comment-input" name="comments" rows="4" placeholder="Escribe tu comentario..." id="comments"></textarea>
+                        <div class="button-container">
+                            <button class="submit-button" type="submit" onclick="sendData('{{ nor }}', '{{ user[0] }}')">Enviar</button>
+                            <form action="{{ url_for('open_folder', id=nor, nombre=details[0]) }}" target="response_frame">
+                                <button class="additional-button" type="submit">Abrir Carpeta</button>
+                            </form>
+
+                            <div class="destination-selects">
+                                <select id="status" name="designer" required>
+                                    <option value="none">Estatus</option>
+                                    <option value="approved">Aprobado</option>
+                                    <option value="canceled">Negado</option>
+                                </select>
+                            </div>
+                            <button class="additional-button" type="button" onclick="showModal('{{ nor }}')">Completado</button>
                         </div>
-                    </div>                              
+                    </div>
+                </div>
                 <div class="confirmation-modal hidden" id="confirmationModal">
                     <div class="modal-content">
                         <h3>¿Estás seguro de que deseas eliminar?</h3>
@@ -183,6 +199,7 @@
                 </div>
                 <script src="../static/js/home.js"></script>
                 <script src="../static/js/sidebar.js"></script>
+                <script src="../static/js/work.js"></script>
             </section>
             <iframe name="response_frame" style="border:none; width:100%; height:50px;"></iframe>
 </body>
